Add PrestamistaService and modify filtering logic in PrestamoApiController